--- a/02/index.html
+++ b/02/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="container-header">
+            <div class="imagem"><img src="img/logo.png" alt="logo"></div>
+            <h1>Calculadora</h1>
+        </div>
+    </header>
+
+    <main>
     <div class="calculadora">
         <input type="text" id="visor" disabled>
 
@@ -41,7 +50,7 @@
                 <button class="operacao" onclick="calculadora.resultado()">=</button>
             </div>
         </div>
-    </div>
+    </div></main>
 
     <script src="script.js"></script>
 </body>
